--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <button data-time="20" class="timer__button">20 Secs</button>
       <button data-time="300" class="timer__button"> 5 Mins</button>
       <button data-time="900" class="timer__button"> 15 Mins</button>
-      <button data-time="1200" class="timer__button"> 20 Mins</button>
-      <button data-time="3600" class="timer__button"> 30 Mins</button>
+      <button data-time="1800" class="timer__button"> 30 Mins</button>
+      <button data-time="3600" class="timer__button"> 1 Hour</button>
       <form name="customForm" id="custom">
         <input type="text" name="minutes" placeholder="Enter Minutes">
       </form>
